--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,25 +7,27 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-header {
-  background-color: #404040;
-  padding: 1rem;
-}
-
-header a {
-  color: #ffffff;
-  font-weight: bold;
-  text-decoration: none;
+.site-container {
+  min-height: 100vh;
 }
 
 main {
-  padding: 1rem;
+  flex: 1;
+}
+
+.btn-primary {
+  background-color: #f0c040;
+  color: #000000;
 }
 
 .products {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+}
+.rating span {
+  color: #ffc000;
 }
 
 .product {
@@ -40,4 +42,12 @@ main {
 
 .product-info {
   padding: 1rem;
+}
+
+.height100 {
+  height: 100%;
+}
+
+.img-large {
+  max-width: 100%;
 }
